# SudokuSolver

./: .gitignore  CMakeLists.txt  NineCellTester.cc  README.md  SudokuSolver.cc  SudokuTester.cc
.github/workflows/: cmake-single-platform.yml
include/: Cell.hh  Cell.hh~  Grid.hh  Grid.hh~  NineCell.hh  Ternary.hh
source/: CMakeLists.txt  CMakeLists.txt~  Cell.cc  Cell.cc~  Grid.cc  Grid.cc~  NineCell.cc  Ternary.cc
testoutputs/: NineCellTesterComparator.txt
